--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ python-engineio==3.13.2
 sanic==20.6.3
 scikit-learn==0.23.2
 scipy==1.5.2
-numpy==1.23.1
+numpy==1.18.5
 pandas==1.0.5
 requests==2.27.1
 openpyxl==3.0.10
 networkx==2.8.5
+matplotlib==3.4.1
+umap-learn==0.5.1
+numba==0.52.0
